// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SegmentedControl /> should match the snapshots 1`] = `
.Row-module__row___xiasO {
  display: grid;
  grid-auto-columns: max-content;
}

.Col-module__col___DPP6Q {
  box-sizing: border-box;
  grid-column: span var(--qtm-col-default-size);
  word-break: break-word;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-stroked-primary___YY4WC {
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-primary-700);
  color: var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

@media (min-width:0px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-xsmall);
    grid-column-gap: var(--qtm-gutter-xsmall);
    grid-row-gap: var(--qtm-gutter-xsmall);
    grid-template-columns: repeat(var(--qtm-breakpoint-xsmall-columns),1fr);
  }
}

@media (min-width:600px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-small);
    grid-column-gap: var(--qtm-gutter-small);
    grid-row-gap: var(--qtm-gutter-small);
    grid-template-columns: repeat(var(--qtm-breakpoint-small-columns),1fr);
  }
}

@media (min-width:1024px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-medium);
    grid-column-gap: var(--qtm-gutter-medium);
    grid-row-gap: var(--qtm-gutter-medium);
    grid-template-columns: repeat(var(--qtm-breakpoint-medium-columns),1fr);
  }
}

@media (min-width:1440px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-large);
    grid-column-gap: var(--qtm-gutter-large);
    grid-row-gap: var(--qtm-gutter-large);
    grid-template-columns: repeat(var(--qtm-breakpoint-large-columns),1fr);
  }
}

@media (min-width:600px) {
  .Col-module__col-small___lioBk {
    grid-column: span var(--qtm-col-small-size);
  }
}

@media (min-width:1024px) {
  .Col-module__col-medium___BHwDC {
    grid-column: span var(--qtm-col-medium-size);
  }
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  width: 100%;
  border-radius: 0px;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c1.input-checked {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 button {
  border: 1px solid;
  border-right: 0px;
  border-color: #1250C4;
  padding: 4px 8px;
}

.c0 button:first-child {
  border-radius: 4px 0px 0px 4px;
}

.c0 button:last-child {
  border-radius: 0px 4px 4px 0px;
  border: 1px solid #1250C4;
}

<div
  class="Row-module__row___xiasO"
>
  <div
    class="Col-module__col___DPP6Q Col-module__col-small___lioBk Col-module__col-medium___BHwDC"
    style="--qtm-col-small-size: 6; --qtm-col-medium-size: 5;"
  >
    <div
      class="c0"
    >
      <button
        aria-label="Profissional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-0"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-0"
          name="segmented-control"
          type="radio"
          value="profissional"
        />
        Profissional
      </button>
      <button
        aria-label="Operacional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1 input-checked"
        for="segmented-button-1"
        tabindex="-1"
        type="button"
      >
        <input
          checked=""
          class="c2"
          id="segmented-button-1"
          name="segmented-control"
          type="radio"
          value="operacional"
        />
        Operacional
      </button>
      <button
        aria-label="Estagiário"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-2"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-2"
          name="segmented-control"
          type="radio"
          value="estagiário"
        />
        Estagiário
      </button>
    </div>
  </div>
</div>
`;

exports[`<SegmentedControl /> should match the snapshots 2`] = `
.Row-module__row___xiasO {
  display: grid;
  grid-auto-columns: max-content;
}

.Col-module__col___DPP6Q {
  box-sizing: border-box;
  grid-column: span var(--qtm-col-default-size);
  word-break: break-word;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-stroked-primary___YY4WC {
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-primary-700);
  color: var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

@media (min-width:0px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-xsmall);
    grid-column-gap: var(--qtm-gutter-xsmall);
    grid-row-gap: var(--qtm-gutter-xsmall);
    grid-template-columns: repeat(var(--qtm-breakpoint-xsmall-columns),1fr);
  }
}

@media (min-width:600px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-small);
    grid-column-gap: var(--qtm-gutter-small);
    grid-row-gap: var(--qtm-gutter-small);
    grid-template-columns: repeat(var(--qtm-breakpoint-small-columns),1fr);
  }
}

@media (min-width:1024px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-medium);
    grid-column-gap: var(--qtm-gutter-medium);
    grid-row-gap: var(--qtm-gutter-medium);
    grid-template-columns: repeat(var(--qtm-breakpoint-medium-columns),1fr);
  }
}

@media (min-width:1440px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-large);
    grid-column-gap: var(--qtm-gutter-large);
    grid-row-gap: var(--qtm-gutter-large);
    grid-template-columns: repeat(var(--qtm-breakpoint-large-columns),1fr);
  }
}

@media (min-width:600px) {
  .Col-module__col-small___lioBk {
    grid-column: span var(--qtm-col-small-size);
  }
}

@media (min-width:1024px) {
  .Col-module__col-medium___BHwDC {
    grid-column: span var(--qtm-col-medium-size);
  }
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  width: 100%;
  border-radius: 0px;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c1.input-checked {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 button {
  border: 1px solid;
  border-right: 0px;
  border-color: #1250C4;
  padding: 4px 8px;
}

.c0 button:first-child {
  border-radius: 4px 0px 0px 4px;
}

.c0 button:last-child {
  border-radius: 0px 4px 4px 0px;
  border: 1px solid #1250C4;
}

<div
  class="Row-module__row___xiasO"
>
  <div
    class="Col-module__col___DPP6Q Col-module__col-small___lioBk Col-module__col-medium___BHwDC"
    style="--qtm-col-small-size: 6; --qtm-col-medium-size: 5;"
  >
    <div
      class="c0"
    >
      <button
        aria-label="Profissional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-3"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-3"
          name="segmented-control"
          type="radio"
          value="profissional"
        />
        <svg
          aria-hidden="true"
          aria-label="Profissional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="InfoIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
          />
        </svg>
      </button>
      <button
        aria-label="Operacional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1 input-checked"
        for="segmented-button-4"
        tabindex="-1"
        type="button"
      >
        <input
          checked=""
          class="c2"
          id="segmented-button-4"
          name="segmented-control"
          type="radio"
          value="operacional"
        />
        <svg
          aria-hidden="true"
          aria-label="Operacional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="BlockIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2M4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12m8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8"
          />
        </svg>
      </button>
      <button
        aria-label="Estagiário"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-5"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-5"
          name="segmented-control"
          type="radio"
          value="estagiário"
        />
        <svg
          aria-hidden="true"
          aria-label="Estagiário"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="DateRangeIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 11H7v2h2zm4 0h-2v2h2zm4 0h-2v2h2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V9h14z"
          />
        </svg>
      </button>
      <button
        aria-label="Maquinário"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-6"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-6"
          name="segmented-control"
          type="radio"
          value="maquinário"
        />
        <svg
          aria-hidden="true"
          aria-label="Maquinário"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="ErrorIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
          />
        </svg>
      </button>
      <button
        aria-label="Favorito"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-7"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-7"
          name="segmented-control"
          type="radio"
          value="favorito"
        />
        <svg
          aria-hidden="true"
          aria-label="Favorito"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="FavoriteBorderIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3m-4.4 15.55-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<SegmentedControl /> should match the snapshots 3`] = `
.Row-module__row___xiasO {
  display: grid;
  grid-auto-columns: max-content;
}

.Col-module__col___DPP6Q {
  box-sizing: border-box;
  grid-column: span var(--qtm-col-default-size);
  word-break: break-word;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-stroked-primary___YY4WC {
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-primary-700);
  color: var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

@media (min-width:0px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-xsmall);
    grid-column-gap: var(--qtm-gutter-xsmall);
    grid-row-gap: var(--qtm-gutter-xsmall);
    grid-template-columns: repeat(var(--qtm-breakpoint-xsmall-columns),1fr);
  }
}

@media (min-width:600px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-small);
    grid-column-gap: var(--qtm-gutter-small);
    grid-row-gap: var(--qtm-gutter-small);
    grid-template-columns: repeat(var(--qtm-breakpoint-small-columns),1fr);
  }
}

@media (min-width:1024px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-medium);
    grid-column-gap: var(--qtm-gutter-medium);
    grid-row-gap: var(--qtm-gutter-medium);
    grid-template-columns: repeat(var(--qtm-breakpoint-medium-columns),1fr);
  }
}

@media (min-width:1440px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-large);
    grid-column-gap: var(--qtm-gutter-large);
    grid-row-gap: var(--qtm-gutter-large);
    grid-template-columns: repeat(var(--qtm-breakpoint-large-columns),1fr);
  }
}

@media (min-width:600px) {
  .Col-module__col-small___lioBk {
    grid-column: span var(--qtm-col-small-size);
  }
}

@media (min-width:1024px) {
  .Col-module__col-medium___BHwDC {
    grid-column: span var(--qtm-col-medium-size);
  }
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  width: 100%;
  border-radius: 0px;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c1.input-checked {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 button {
  border: 1px solid;
  border-right: 0px;
  border-color: #1250C4;
  padding: 4px 8px;
}

.c0 button:first-child {
  border-radius: 4px 0px 0px 4px;
}

.c0 button:last-child {
  border-radius: 0px 4px 4px 0px;
  border: 1px solid #1250C4;
}

<div
  class="Row-module__row___xiasO"
>
  <div
    class="Col-module__col___DPP6Q Col-module__col-small___lioBk Col-module__col-medium___BHwDC"
    style="--qtm-col-small-size: 6; --qtm-col-medium-size: 5;"
  >
    <div
      class="c0"
    >
      <button
        aria-label="Profissional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-8"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-8"
          name="segmented-control"
          type="radio"
          value="profissional"
        />
        <svg
          aria-hidden="true"
          aria-label="Profissional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="InfoIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
          />
        </svg>
      </button>
      <button
        aria-label="Operacional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1 input-checked"
        for="segmented-button-9"
        tabindex="-1"
        type="button"
      >
        <input
          checked=""
          class="c2"
          id="segmented-button-9"
          name="segmented-control"
          type="radio"
          value="operacional"
        />
        <svg
          aria-hidden="true"
          aria-label="Operacional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="BlockIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2M4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12m8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8"
          />
        </svg>
      </button>
      <button
        aria-label="Estagiário"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-10"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-10"
          name="segmented-control"
          type="radio"
          value="estagiário"
        />
        <svg
          aria-hidden="true"
          aria-label="Estagiário"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="DateRangeIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 11H7v2h2zm4 0h-2v2h2zm4 0h-2v2h2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V9h14z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<SegmentedControl /> should match the snapshots 4`] = `
.Row-module__row___xiasO {
  display: grid;
  grid-auto-columns: max-content;
}

.Col-module__col___DPP6Q {
  box-sizing: border-box;
  grid-column: span var(--qtm-col-default-size);
  word-break: break-word;
}

.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-stroked-primary___YY4WC {
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-primary-700);
  color: var(--qtm-colors-primary-700);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

@media (min-width:0px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-xsmall);
    grid-column-gap: var(--qtm-gutter-xsmall);
    grid-row-gap: var(--qtm-gutter-xsmall);
    grid-template-columns: repeat(var(--qtm-breakpoint-xsmall-columns),1fr);
  }
}

@media (min-width:600px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-small);
    grid-column-gap: var(--qtm-gutter-small);
    grid-row-gap: var(--qtm-gutter-small);
    grid-template-columns: repeat(var(--qtm-breakpoint-small-columns),1fr);
  }
}

@media (min-width:1024px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-medium);
    grid-column-gap: var(--qtm-gutter-medium);
    grid-row-gap: var(--qtm-gutter-medium);
    grid-template-columns: repeat(var(--qtm-breakpoint-medium-columns),1fr);
  }
}

@media (min-width:1440px) {
  .Row-module__row___xiasO {
    margin-bottom: var(--qtm-gutter-large);
    grid-column-gap: var(--qtm-gutter-large);
    grid-row-gap: var(--qtm-gutter-large);
    grid-template-columns: repeat(var(--qtm-breakpoint-large-columns),1fr);
  }
}

@media (min-width:600px) {
  .Col-module__col-small___lioBk {
    grid-column: span var(--qtm-col-small-size);
  }
}

@media (min-width:1024px) {
  .Col-module__col-medium___BHwDC {
    grid-column: span var(--qtm-col-medium-size);
  }
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  width: 100%;
  border-radius: 0px;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c1.input-checked {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 button {
  border: 1px solid;
  border-right: 0px;
  border-color: #1250C4;
  padding: 4px 8px;
}

.c0 button:first-child {
  border-radius: 4px 0px 0px 4px;
}

.c0 button:last-child {
  border-radius: 0px 4px 4px 0px;
  border: 1px solid #1250C4;
}

<div
  class="Row-module__row___xiasO"
>
  <div
    class="Col-module__col___DPP6Q Col-module__col-small___lioBk Col-module__col-medium___BHwDC"
    style="--qtm-col-small-size: 6; --qtm-col-medium-size: 5;"
  >
    <div
      class="c0"
    >
      <button
        aria-label="Profissional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-11"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-11"
          name="segmented-control"
          type="radio"
          value="profissional"
        />
        <svg
          aria-hidden="true"
          aria-label="Profissional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="InfoIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
          />
        </svg>
      </button>
      <button
        aria-label="Operacional"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1 input-checked"
        for="segmented-button-12"
        tabindex="-1"
        type="button"
      >
        <input
          checked=""
          class="c2"
          id="segmented-button-12"
          name="segmented-control"
          type="radio"
          value="operacional"
        />
        <svg
          aria-hidden="true"
          aria-label="Operacional"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="BlockIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2M4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12m8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8"
          />
        </svg>
      </button>
      <button
        aria-label="Estagiário"
        class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-stroked-primary___YY4WC Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH c1"
        for="segmented-button-13"
        tabindex="0"
        type="button"
      >
        <input
          class="c2"
          id="segmented-button-13"
          name="segmented-control"
          type="radio"
          value="estagiário"
        />
        <svg
          aria-hidden="true"
          aria-label="Estagiário"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-qtm-preloader="icon"
          data-testid="DateRangeIcon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 11H7v2h2zm4 0h-2v2h2zm4 0h-2v2h2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 16H5V9h14z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
